add repos endpoint and its get, put, delete methods
